 - Add Iventoryimages / Combat Analysis Articles for ufoPaedia for Drones
 - Add Iventoryimages / Combat Analysis Articles for ufoPaedia for AlloyDrones
 - Add Iventoryimages / Combat Analysis Articles for ufoPaedia for Hoverdrones
 - Disable extendedRunningCost permanently (keep my Drones running and stopping for enemy spottings)
 - Remove Dustoff = Fuckoff

Version 0.99.9.7
 - Fix Wrong Unknown Var definition in alienDeployments
 - Fix early GameStart AlienBaseMission and recurringTerror
 - Fix some Ruleset Typos and Indentation Errors
 - Fix UFO flight/landed scorering settings
 - Fix Game crashing Bug for Muton Elite Guard Navigators
 - Fix missing Sellscript entry for Muton elite Guard Navigators
 - Add Dustoff = Fuckoff
 - Update constants listing format
 - Update AI value listing format

Version 0.99.9.6
 - Fix Mod not loading on OXCE 8.0.0. (rapidyml)
 - Fix Wrong Inventorysprites for Alloy Tanks
 - Fix Alien Data Slate Occurance
 - Fix wrong values on Snakeman / Waspite Armors
 - Fix Hovertank Inventoryimage position
 - Fix some Colors on some Inventory and Ufopaedia Pictures
 - Fix DOWNTOWNURBAN Mapscript for size 60x60
 - Update Language files for more translations
 - Unify Alien Base cancellation behaviour (exception Alien Base at Gamestart)
 - Adjust Alien Missions and Scoring slightly
 - Adjust Armors for Gazers, Sectoid Elite, Muton Elite, Ethereals, Muton Elite Guard
 - Adjust Aliendeployment spawns to also enable lower Difficulties with proper scaling
 - Adjust Terrorsite mapScripts for UFO spawn and proper block variety
 - Adjust Alien Alloy recovery from Missionsites to give proper yield
 - Adjust Tank fire accuracies slightly
 - Adjust Zombification Weapons now need to penetrate Armor (no more guaranteed Instant Kill Zombies for Chryssalids)
 - Adjust Heavy Plasma Autoshot (now 4 instead of 3, YES it does a load of damage!)
 - Add Terrorships Spawn on Terrorsites
 - Add Terrorship reappears after Terrorsite despawn or failed/aborted XCom Mission