@@ -168,6 +168,8 @@ it:
 #END CRAFTWEAPONS
 
 #BEGIN DRONES
+  STR_DRONE_FLARE_WEAPON: ""
+  STR_DRONE_FLARE_WEAPON_UFOPEDIA: ""
   STR_DRONE_SMOKE_WEAPON: ""
   STR_DRONE_SMOKE_WEAPON_UFOPEDIA: ""
 
@@ -229,6 +231,8 @@ it:
   STR_UPGRADE_DRONE_TASER_TO_ALLOY_ADVANCED_MEDIKIT: ""
   STR_UPGRADE_DRONE_TASER_TO_ALLOY_TASER: "Drone/Taser -> Taser in Lega"
 
+  STR_ALLOY_DRONE_FLARE_WEAPON: ""
+  STR_ALLOY_DRONE_FLARE_WEAPON_UFOPEDIA: ""
   STR_ALLOY_DRONE_SMOKE_WEAPON: ""
   STR_ALLOY_DRONE_SMOKE_WEAPON_UFOPEDIA: ""
 
@@ -307,6 +311,8 @@ it:
   STR_UPGRADE_ALLOY_DRONE_TASER_TO_HOVER_ADVANCED_MEDIKIT: ""
   STR_UPGRADE_ALLOY_DRONE_TASER_TO_HOVER_TASER: ""
 
+  STR_HOVERDRONE_FLARE_WEAPON: ""
+  STR_HOVERDRONE_FLARE_WEAPON_UFOPEDIA: ""
   STR_HOVERDRONE_SMOKE_WEAPON: ""
   STR_HOVERDRONE_SMOKE_WEAPON_UFOPEDIA: ""
 
