@@ -168,6 +168,8 @@ ko:
 #END CRAFTWEAPONS
 
 #BEGIN DRONES
+  STR_DRONE_FLARE_WEAPON: ""
+  STR_DRONE_FLARE_WEAPON_UFOPEDIA: ""
   STR_DRONE_SMOKE_WEAPON: "드론 연막탄 발사기"
   STR_DRONE_SMOKE_WEAPON_UFOPEDIA: ""
 
@@ -204,7 +206,7 @@ ko:
   STR_DRONE_MEDIKIT_WEAPON: "드론 메디키트"
   STR_DRONE_MEDIKIT_CORPSE: "파손된 드론/메디키트"
   STR_DRONE_MEDIKIT_REPAIR: "드론/메디키트 수리"
-  STR_DRONE_MEDIKIT_UFOPEDIA: "이 정찰 드론에는 약간 변형된 메디키트가 장착되어 극도로 위험한 상황에서도 아군과 적을 치료할 수 있습니다. 여전히 정찰용으로 사용할 수 있지만 의료장비를 내장시키면서 장갑을 줄여야했다는 점에 유념해야 합니다. 드론은 병사가 메디키트를 사용하는 것과 똑같이 사용이 가능합니다. 기존 메디키트보다 용량이 두 배의 입니다."
+  STR_DRONE_MEDIKIT_UFOPEDIA: ""
   STR_UPGRADE_DRONE_MEDIKIT_TO_SCANNER: "드론/메디키트 -> 드론/스캐너"
   STR_UPGRADE_DRONE_MEDIKIT_TO_TASER: "드론/메디키트 -> 드론/테이저"
   STR_UPGRADE_DRONE_MEDIKIT_TO_ALLOY_SCOUT: "드론/메디키트 -> 합금 드론/스카우트"
@@ -229,6 +231,8 @@ ko:
   STR_UPGRADE_DRONE_TASER_TO_ALLOY_ADVANCED_MEDIKIT: ""
   STR_UPGRADE_DRONE_TASER_TO_ALLOY_TASER: "드론/테이저 -> 합금 드론/테이저"
 
+  STR_ALLOY_DRONE_FLARE_WEAPON: ""
+  STR_ALLOY_DRONE_FLARE_WEAPON_UFOPEDIA: ""
   STR_ALLOY_DRONE_SMOKE_WEAPON: ""
   STR_ALLOY_DRONE_SMOKE_WEAPON_UFOPEDIA: ""
 
@@ -281,7 +285,7 @@ ko:
   STR_ALLOY_DRONE_ADVANCED_MEDIKIT_WEAPON: ""
   STR_ALLOY_DRONE_ADVANCED_MEDIKIT_CORPSE: ""
   STR_ALLOY_DRONE_ADVANCED_MEDIKIT_REPAIR: ""
-  STR_ALLOY_DRONE_ADVANCED_MEDIKIT_UFOPEDIA: "기존 드론에 합금 장갑판을 장착하여 설계를 향상시킬 수 있었고, 이제 도움이 필요한 아군을 치료하기 위해 더 많은 의료 장비를 내장하고 있습니다. 또한 진단 및 적용 모듈을 재설계하여 기존보다 신속한 치료가 가능합니다. 향상된 메디키트보다 두 배의 용량을 가집니다."
+  STR_ALLOY_DRONE_ADVANCED_MEDIKIT_UFOPEDIA: ""
   STR_UPGRADE_ALLOY_DRONE_ADVANCED_MEDIKIT_TO_ALLOY_SCOUT: ""
   STR_UPGRADE_ALLOY_DRONE_ADVANCED_MEDIKIT_TO_ALLOY_SCANNER: ""
   STR_UPGRADE_ALLOY_DRONE_ADVANCED_MEDIKIT_TO_ALLOY_TASER: ""
@@ -307,6 +311,8 @@ ko:
   STR_UPGRADE_ALLOY_DRONE_TASER_TO_HOVER_ADVANCED_MEDIKIT: ""
   STR_UPGRADE_ALLOY_DRONE_TASER_TO_HOVER_TASER: ""
 
+  STR_HOVERDRONE_FLARE_WEAPON: ""
+  STR_HOVERDRONE_FLARE_WEAPON_UFOPEDIA: ""
   STR_HOVERDRONE_SMOKE_WEAPON: ""
   STR_HOVERDRONE_SMOKE_WEAPON_UFOPEDIA: ""
 
